# align-programs-v2

./: .gitignore  Anchor.toml  README.md  package.json
programs/multisig-controller/: Cargo.toml
programs/multisig-controller/src/: error.rs  lib.rs  state.rs
programs/multisig-controller/src/instructions/: initialize_multisig_config_v0.rs  mod.rs  relinquish_vote_v0.rs  vote_v0.rs
programs/nft-reputation/: Cargo.toml
programs/nft-reputation/src/: error.rs  lib.rs  state.rs
programs/nft-reputation/src/instructions/: add_to_receipt_v0.rs  initialize_nft_voter_v0.rs  mod.rs  relinquish_vote_v0.rs  vote_v0.rs
programs/org-guard/: Cargo.toml
programs/org-guard/src/: error.rs  lib.rs  metaplex.rs  state.rs
programs/org-guard/src/instructions/: initialize_guard_v0.rs  initialize_proposal_base_v0.rs  initialize_proposal_by_nft_v0.rs  initialize_proposal_by_token_v0.rs  initialize_proposal_by_wallet_v0.rs  initialize_proposal_permissively_v0.rs  initialize_proposal_v0.rs  mod.rs
programs/organization/: Cargo.toml
programs/organization/src/: lib.rs  state.rs
programs/organization/src/instructions/: initialize_organization_v0.rs  initialize_proposal_v0.rs  update_organization_v0.rs
programs/organization_wallet/: Cargo.toml
programs/organization_wallet/src/: error.rs  lib.rs  resize_to_fit.rs  state.rs
programs/organization_wallet/src/instructions/: execute_transaction_v0.rs  initialize_organization_wallet_v0.rs  set_transactions_v0.rs
programs/reputation/: Cargo.toml
programs/reputation/src/: error.rs  lib.rs
programs/state_controller/: Cargo.toml
programs/state_controller/src/: error.rs  lib.rs  state.rs
programs/state_controller/src/instructions/: initialize_resolution_settings_v0.rs  mod.rs  on_vote_v0.rs  resolve_v0.rs  update_state_v0.rs
programs/vote_proxy/: Cargo.toml
programs/vote_proxy/src/: error.rs  lib.rs
tests/: align-programs-v2.ts  helpers.ts  multisig.ts  org-nft-guard.ts  organization.ts  state_controller.ts  utils.ts  vote-proxy.ts
tests/idls/: nft_voter.json  nft_voter.ts  proposal.ts
