[package]
name = "org-nft-guard"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "org_nft_guard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = { version = "0.30.0", features = ["token"] }
organization = { path = "../organization", features = ["no-entrypoint", "cpi"] }

