[package]
name = "organization-wallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "organization_wallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = "0.30.0"
proposal = { path = "../../../modular-governance/programs/proposal", features = ["no-entrypoint", "cpi"] }
organization = { path = "../organization", features = ["no-entrypoint", "cpi"] }
