[package]
name = "vote_proxy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vote_proxy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/ChewingGlass/anchor", branch = "bugfix/cpi-polymorphism", features = ["init-if-needed"] }
proposal = { path = "../../../modular-governance/programs/proposal", features = ["no-entrypoint", "cpi"] }
nft-voter = {path = "../../../modular-governance/programs/nft_voter", features = ["no-entrypoint", "cpi"] }